Auto check of capturing processes

--- a/config.yml
+++ b/config.yml
@@ -4,3 +4,4 @@ captureDirectory: captures # Where you want the captures to be saved to
 completeDirectory: complete # Where you want the "finalized" captures to be moved to as soon as model stops streaming
 modelScanInterval: 30 # In seconds, how often capturebate-node checks for newly-online models
 debug: false
+rtmpDebug: false
