--- a/config.yml
+++ b/config.yml
@@ -6,3 +6,5 @@ modelScanInterval: 30 # In seconds, how often capturebate-node checks for newly-
 debug: false
 rtmpDebug: false
 minFileSizeMb: 10
+dateFormat: YYYYMMDD-HHmmss
+createModelDirectory: false
