--- a/convert.yml
+++ b/convert.yml
@@ -1,4 +1,5 @@
-srcDirectory: ./complete # directory where you store your .ts files
-dstDirectory: ./converted # directory where do you want to store your .mp4 files
+srcDirectory: complete # directory where you store your .ts or .flv files
+dstDirectory: converted # directory where do you want to store your .mp4 files
 dirScanInterval: 300 # in seconds, min: 5 seconds
-deleteAfter: false # if it is false the original file will be stored in the same directory with its .mp4 version
+deleteAfter: true # if you want to keep the original files then set to false
+maxConcur: 2 # how many files to convert simultaneously
