--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-    "name": "capturebate-node",
-    "version": "0.2.0",
-    "description": "CaptureBate rewrite in Node",
-    "main": "main.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/SN4T14/capturebate-node.git"
-    },
-    "author": "SN4T14",
-    "license": "WTFPL",
-    "bugs": {
-        "url": "https://github.com/SN4T14/capturebate-node/issues"
-    },
-    "homepage": "https://github.com/SN4T14/capturebate-node",
-    "dependencies": {
-        "bluebird": "^2.9.25",
-        "js-yaml": "^3.3.1",
-        "bhttp": "^1.2.1",
-        "cheerio": "^0.19.0",
-        "moment": "^2.10.3",
-        "mkdirp": "^0.5.1",
-        "string": "^3.1.1",
-        "underscore": "latest",
-        "colors": "latest"
-    }
+  "name": "capturebate-node",
+  "version": "0.2.1",
+  "description": "CaptureBate rewrite in Node",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/SN4T14/capturebate-node.git"
+  },
+  "author": "SN4T14",
+  "license": "WTFPL",
+  "bugs": {
+    "url": "https://github.com/SN4T14/capturebate-node/issues"
+  },
+  "homepage": "https://github.com/SN4T14/capturebate-node",
+  "dependencies": {
+    "JSONStream": "^1.3.1",
+    "bhttp": "^1.2.1",
+    "bluebird": "^2.9.25",
+    "cheerio": "^0.19.0",
+    "colors": "^1.1.2",
+    "filewalker": "^0.1.3",
+    "js-yaml": "^3.3.1",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.10.3",
+    "mv": "^2.1.1",
+    "promise-queue": "^2.2.3",
+    "string": "^3.1.1"
+  }
 }
